Update github link

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -20,7 +20,7 @@ sidebar:
     website:  #add or not http:// or https:// still working
     linkedin: danny-krestianto-563a8554
     xing: 
-    github: 
+    github: dannyosama
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
